--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,47 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_v2.11.3.1_.282015-11-15_20:00_Sun.29">Release: v2.11.3.1 (2015-11-15 20:00 Sun)</span>
+    </h2>
+    <p>
+      v2.11.3 is a fairly minor release. It addresses one minor bug with "1. REDIRECT" showing up on pages.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Fix_for_.221._REDIRECT.22_showing_up_on_some_pages">Fix for "1. REDIRECT" showing up on some pages</span>
+    </h3>
+    <p>
+      This was a bug I introduced while fixing another issue in v2.11.2. Some pages would now show "1. REDIRECT", most notably en.w:Earth
+    </p>
+    <h3>
+      <span class="mw-headline" id="Wiki_bundles_for_Slovak.2C_Slovenian.2C_Galician.2C_and_Waray-Waray_wikis">Wiki bundles for Slovak, Slovenian, Galician, and Waray-Waray wikis</span>
+    </h3>
+    <p>
+      These have been uploaded to archive.org
+    </p>
+    <ul>
+      <li>
+        <a href="https://archive.org/details/Xowa_skwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_skwiki_latest</a>
+      </li>
+      <li>
+        <a href="https://archive.org/details/Xowa_slwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_slwiki_latest</a>
+      </li>
+      <li>
+        <a href="https://archive.org/details/Xowa_glwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_glwiki_latest</a>
+      </li>
+      <li>
+        <a href="https://archive.org/details/Xowa_warwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_warwiki_latest</a>
+      </li>
+    </ul>
+    <h3>
+      <span class="mw-headline" id="Next_release:_v2.11.4">Next release: v2.11.4</span>
+    </h3>
+    <p>
+      I fixed the one minor Wikibase issue, but am deferring a few other possible issues till later. I'm still chugging away on the HTML dump. My aim is to get a simple wiki dump for the next release.
+    </p>
+    <p>
+      I generated the English Wiki dump but there were only about 3 thousand new images, and I didn't feel that it merited an update. For wikis, I'm going to update French, and then go through as many as I can of Lithuanian, Limburgish, Estonian, Latvian and Nynorsk.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v2.11.2.1_.282015-11-08_22:00_Sun.29">Release: v2.11.2.1 (2015-11-08 22:00 Sun)</span>
     </h2>
     <p>
