--- a/image_dbs.html
+++ b/image_dbs.html
@@ -2530,33 +2530,32 @@
             <a href="https://sk.wiktionary.org/wiki/">https://sk.wiktionary.org</a><br>
             <a href="https://sk.wikisource.org/wiki/">https://sk.wikisource.org</a><br>
             <a href="https://sk.wikiquote.org/wiki/">https://sk.wikiquote.org</a><br>
-            <a href="https://sk.wikibooks.org/wiki/">https://sk.wikibooks.org</a><br>
+            <a href="https://sk.wikibooks.org/wiki/">https://sk.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-06<br>
-            2014-09-19<br>
-            2014-09-19<br>
-            2014-09-19<br>
-            2014-09-19<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-15
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.3
+            6
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_skwiki_latest/Xowa_skbundle_2014-09-20.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_skwiki_latest/Xowa_skbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2568,24 +2567,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-21
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-15
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.2
+            2.5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_warwiki_latest/Xowa_warwiki_2014-09-21.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_warwiki_latest/Xowa_warbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2597,71 +2599,68 @@
             <a href="https://sl.wikisource.org/wiki/">https://sl.wikisource.org</a><br>
             <a href="https://sl.wikiquote.org/wiki/">https://sl.wikiquote.org</a><br>
             <a href="https://sl.wikibooks.org/wiki/">https://sl.wikibooks.org</a><br>
-            <a href="https://sl.wikiversity.org/wiki/">https://sl.wikiversity.org</a><br>
+            <a href="https://sl.wikiversity.org/wiki/">https://sl.wikiversity.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-28<br>
-            2014-09-23<br>
-            2014-09-23<br>
-            2014-09-19<br>
-            2014-09-19<br>
-            2014-09-11<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-15
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.1
+            2.5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_slwiki_latest/Xowa_slbundle_2014-10-04.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_slwiki_latest/Xowa_slbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://gl.wikipedia.org/wiki/">http://gl.wikipedia.org</a><br>
-            <a href="https://gl.wiktionary.org/wiki/">http://gl.wiktionary.org</a><br>
-            <a href="https://gl.wikisource.org/wiki/">http://gl.wikisource.org</a><br>
-            <a href="https://gl.wikiquote.org/wiki/">http://gl.wikiquote.org</a><br>
-            <a href="https://gl.wikibooks.org/wiki/">http://gl.wikibooks.org</a><br>
+            <a href="https://gl.wikipedia.org/wiki/">https://gl.wikipedia.org</a><br>
+            <a href="https://gl.wiktionary.org/wiki/">https://gl.wiktionary.org</a><br>
+            <a href="https://gl.wikisource.org/wiki/">https://gl.wikisource.org</a><br>
+            <a href="https://gl.wikiquote.org/wiki/">https://gl.wikiquote.org</a><br>
+            <a href="https://gl.wikibooks.org/wiki/">https://gl.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-29<br>
-            2014-09-30<br>
-            2014-09-24<br>
-            2014-09-27<br>
-            2014-09-27<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-15
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.8
+            3
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_glwiki_latest/Xowa_glbundle_2014-10-10.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_glwiki_latest/Xowa_glbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
