--- a/index.html
+++ b/index.html
@@ -94,9 +94,21 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-11-15</b> Slovak, Slovenian, Galician and Waray-Waray wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_slwiki_latest" class="external text" rel="nofollow">Slovak wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_skwiki_latest" class="external text" rel="nofollow">Slovenian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_glwiki_latest" class="external text" rel="nofollow">Galician wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_warwiki_latest" class="external text" rel="nofollow">Waray-Waray wikis</a>
+    </li>
+  </ul>
+
   <b>2015-11-08</b> Danish, Croatian, Serbo-Croatian and Estonian wiki updates released<br/>
   <ul>
-    <li> <a href="https://archive.org/details/Xowa_dawiki_latest" class="external text" rel="nofollow">Danish Wikipedia</a>
+    <li> <a href="https://archive.org/details/Xowa_dawiki_latest" class="external text" rel="nofollow">Danish wikis</a>
     </li>
     <li> <a href="https://archive.org/details/Xowa_shwiki_latest" class="external text" rel="nofollow">Serbo-Croatian wikis</a>
     </li>
@@ -125,40 +137,6 @@
     <li> <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">Malay wikis</a>
     </li>
     <li> <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">Bulgarian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-09-28</b> Hungarian and Thai wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_huwiki_latest" class="external text" rel="nofollow">Hungarian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_thwiki_latest" class="external text" rel="nofollow">Thai wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-09-21</b> Portuguese, Romanian and Indonesian wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_ptwiki_latest" class="external text" rel="nofollow">Portuguese wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_rowiki_latest" class="external text" rel="nofollow">Romanian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_idwiki_latest" class="external text" rel="nofollow">Indonesian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-09-14</b> English and Chinese wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_zhwiki_latest" class="external text" rel="nofollow">Chinese wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-09-07</b> German and Turkish wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_trwiki_latest" class="external text" rel="nofollow">Turkish wikis</a>
     </li>
   </ul>
 </td>
