--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-11-22</b> French, Lithuanian, Limburgish, Estonian, Latvian, Nynorsk, and Cebuano wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_ltwiki_latest" class="external text" rel="nofollow">Lithuanian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_liwiki_latest" class="external text" rel="nofollow">Limburgish wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_etwiki_latest" class="external text" rel="nofollow">Estonian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_lvwiki_latest" class="external text" rel="nofollow">Latvian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_nnwiki_latest" class="external text" rel="nofollow">Nynorsk wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_cebwiki_latest" class="external text" rel="nofollow">Cebuano wikis</a>
+    </li>
+  </ul>
+
   <b>2015-11-15</b> Slovak, Slovenian, Galician and Waray-Waray wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_slwiki_latest" class="external text" rel="nofollow">Slovak wikis</a>
