--- a/image_dbs.html
+++ b/image_dbs.html
@@ -736,17 +736,17 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-23
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-14
+            2015-11-22
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            32
+            34.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -756,12 +756,13 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_wiki.7z" class="external text" rel="nofollow">wiki</a><br>
-             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
-             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main.part-1</a><br>
-             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main.part-2</a><br>
-             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_file_ns-000_part-3.7z" class="external text" rel="nofollow">images.main.part-3</a><br>
-             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-04-23_file_ns-100.7z" class="external text" rel="nofollow">images.other</a><br>
+            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_wiki.7z" rel="nofollow" class="external text">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-000_part-4.7z" rel="nofollow" class="external text">images.main.part-4</a><br>
+             <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_file_ns-100.7z" rel="nofollow" class="external text">images.other</a>
           </p>
         </td>
       </tr>
@@ -779,23 +780,17 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-13<br>
-            2015-04-10<br>
-            2015-04-10<br>
-            2015-04-24<br>
-            2015-04-14<br>
-            2015-04-12<br>
-            2015-04-13<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-14
+            2015-11-22
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            7.2
+            8.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -805,7 +800,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frbundle_2015-05-05.7z" class="external text" rel="nofollow">wikis and images</a><br>
+            <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -1309,6 +1304,39 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_eswiki_latest/Xowa_esbundle_2015-06-02.7z" class="external text" rel="nofollow">wikis and images</a><br>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://ru.wikipedia.org/wiki/">https://ru.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-02-12
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            31
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .sqlite3
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_wiki.7z" rel="nofollow" class="external text">wiki: 2015-02-12</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_001.7z" rel="nofollow" class="external text">images: 2014-10-07 #1</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_002.7z" rel="nofollow" class="external text">images: 2014-10-07 #2</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_003.7z" rel="nofollow" class="external text">images: 2014-10-07 #3</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_images_update.7z" rel="nofollow" class="external text">images: 2015-02-12</a><br>
           </p>
         </td>
       </tr>
@@ -2671,33 +2699,32 @@
             <a href="https://lt.wiktionary.org/wiki/">https://lt.wiktionary.org</a><br>
             <a href="https://lt.wikisource.org/wiki/">https://lt.wikisource.org</a><br>
             <a href="https://lt.wikiquote.org/wiki/">https://lt.wikiquote.org</a><br>
-            <a href="https://lt.wikibooks.org/wiki/">https://lt.wikibooks.org</a><br>
+            <a href="https://lt.wikibooks.org/wiki/">https://lt.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-28<br>
-            2014-09-28<br>
-            2014-09-23<br>
-            2014-09-23<br>
-            2014-09-23<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.8
+            3.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_ltwiki_latest/Xowa_ltbundle_2014-10-18.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_ltwiki_latest/Xowa_ltbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2708,19 +2735,18 @@
             <a href="https://li.wiktionary.org/wiki/">https://li.wiktionary.org</a><br>
             <a href="https://li.wikisource.org/wiki/">https://li.wikisource.org</a><br>
             <a href="https://li.wikiquote.org/wiki/">https://li.wikiquote.org</a><br>
-            <a href="https://li.wikibooks.org/wiki/">https://li.wikibooks.org</a><br>
+            <a href="https://li.wikibooks.org/wiki/">https://li.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-24<br>
-            2014-09-20<br>
-            2014-10-06<br>
-            2014-10-06<br>
-            2014-09-24<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
@@ -2729,12 +2755,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_liwiki_latest/Xowa_libundle_2014-10-18.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_liwiki_latest/Xowa_libundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2745,33 +2771,32 @@
             <a href="https://et.wiktionary.org/wiki/">https://et.wiktionary.org</a><br>
             <a href="https://et.wikisource.org/wiki/">https://et.wikisource.org</a><br>
             <a href="https://et.wikiquote.org/wiki/">https://et.wikiquote.org</a><br>
-            <a href="https://et.wikibooks.org/wiki/">https://et.wikibooks.org</a><br>
+            <a href="https://et.wikibooks.org/wiki/">https://et.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-17<br>
-            2014-10-02<br>
-            2014-09-28<br>
-            2014-09-28<br>
-            2014-09-29<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2
+            2.2
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_etwiki_latest/Xowa_etbundle_2014-10-24.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_etwiki_latest/Xowa_etbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2780,31 +2805,32 @@
           <p>
             <a href="https://lv.wikipedia.org/wiki/">https://lv.wikipedia.org</a><br>
             <a href="https://lv.wiktionary.org/wiki/">https://lv.wiktionary.org</a><br>
-            <a href="https://lv.wikibooks.org/wiki/">https://lv.wikibooks.org</a><br>
+            <a href="https://lv.wikibooks.org/wiki/">https://lv.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-16<br>
-            2014-10-25<br>
-            2014-10-20<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.4
+            1.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_lvwiki_latest/Xowa_lvbundle_2014-11-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_lvwiki_latest/Xowa_lvbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2813,60 +2839,64 @@
           <p>
             <a href="https://nn.wikipedia.org/wiki/">https://nn.wikipedia.org</a><br>
             <a href="https://nn.wiktionary.org/wiki/">https://nn.wiktionary.org</a><br>
-            <a href="https://nn.wikiquote.org/wiki/">https://nn.wikiquote.org</a><br>
+            <a href="https://nn.wikiquote.org/wiki/">https://nn.wikiquote.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-21<br>
-            2014-10-22<br>
-            2014-10-21<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.4
+            2
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_nnwiki_latest/Xowa_nnbundle_2014-11-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_nnwiki_latest/Xowa_nnbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://ceb.wikipedia.org/wiki/">https://ceb.wikipedia.org</a><br>
+            <a href="https://ceb.wikipedia.org/wiki/">https://ceb.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-26<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-22
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.5
+            2.6
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_cebwiki_latest/Xowa_cebbundle_2014-11-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_cebwiki_latest/Xowa_cebbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
