--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,18 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282015-11-29_19:30_Sun.29">Release: NONE (2015-11-29 19:30 Sun)</span>
+    </h2>
+    <p>
+      This week will be another skipped release. I've only made very minor changes this week, so it didn't seem worth it to make a new release.
+    </p>
+    <p>
+      I did post wikis for Dutch and Latin at <a href="https://archive.org/details/Xowa_nlwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_nlwiki_latest</a> and <a href="https://archive.org/details/Xowa_lawiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_lawiki_latest</a>
+    </p>
+    <p>
+      For 2.12.1 I'm going to finish up the dump and try to get another Android version for Simple Wikipedia. For wikis, I'll work on Italian.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v2.11.4.1_.282015-11-22_20:00_Sun.29">Release: v2.11.4.1 (2015-11-22 20:00 Sun)</span>
     </h2>
     <p>
