--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-11-29</b> Dutch and Latin wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_lawiki_latest" class="external text" rel="nofollow">Latin wikis</a>
+    </li>
+  </ul>
+
   <b>2015-11-22</b> French, Lithuanian, Limburgish, Estonian, Latvian, Nynorsk, and Cebuano wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
