--- a/image_dbs.html
+++ b/image_dbs.html
@@ -992,85 +992,32 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-01-27
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-26
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            15.7
+            19.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-02-05_wiki.7z" class="external text" rel="nofollow">wiki: 2015-02-05</a><br>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2014-01-27_images_complete_1.7z" class="external text" rel="nofollow">images: 2014-01-27 #1</a><br>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2014-01-27_images_complete_2.7z" class="external text" rel="nofollow">images: 2014-01-27 #2</a><br>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2014-01-27_images_complete_3.7z" class="external text" rel="nofollow">images: 2014-01-27 #3</a><br>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://nl.wikipedia.org/wiki/">https://nl.wikipedia.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2014-05-24
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            1.8
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .sqlite3
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2014-05-24_images_update.7z" class="external text" rel="nofollow">images: 2014-05-24</a><br>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://nl.wikipedia.org/wiki/">https://nl.wikipedia.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-02-05
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            1.8
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .sqlite3
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-02-05_images_update.7z" class="external text" rel="nofollow">images: 2015-02-05</a><br>
+            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_text.7z" rel="nofollow" class="external text">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlwiki_2015-11-02_file_ns-100.7z" rel="nofollow" class="external text">images.other</a>
           </p>
         </td>
       </tr>
@@ -1087,15 +1034,13 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-13<br>
-            2015-02-17<br>
-            2015-02-20<br>
-            2015-02-16<br>
-            2015-02-17<br>
-            2015-02-16<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-26
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
@@ -1104,12 +1049,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlbundle_2015-02-24.7z" class="external text" rel="nofollow">bundle: 2015-02-24</a><br>
+            <a href="https://archive.org/download/Xowa_nlwiki_latest/Xowa_nlbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -1125,28 +1070,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-14<br>
-            2015-01-06<br>
-            2015-01-23<br>
-            2015-02-18<br>
-            2015-01-06<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-26
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            3.3
+            3.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_lawiki_latest/Xowa_labundle_2015-02-25.7z" class="external text" rel="nofollow">bundle: 2015-02-25</a>
+            <a href="https://archive.org/download/Xowa_lawiki_latest/Xowa_labundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
